[project]
name = "baml-uv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "baml-py>=0.58.0",
    "fastapi[standard]>=0.114.0",
    "ipykernel>=6.29.5",
    "pdf2image>=1.17.0",
    "pytest-asyncio>=0.24.0",
    "pytest>=8.3.3",
]
[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
